--- a/trunk/cds/html/iframe.htm
+++ b/trunk/cds/html/iframe.htm
@@ -5,7 +5,11 @@
   <meta http-equiv="Pragma" content="cache">
   <meta http-equiv="Cache-control" content="public">
   <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js"></script>
-  <script type=text/javascript src="https://gitkit-cds.appspot.com/javascript/cds-iframe.js"></script>
+  <!--script type=text/javascript src="https://gitkit-cds.appspot.com/javascript/cds-iframe.js"></script-->
+  <script type="text/javascript" src="https://ajax.googleapis.com/jsapi"></script>
+  <script type="text/javascript">
+    google.load('identitytoolkit', '0.1', {packages: ['cds_iframe']});
+  </script>
 </head>
 <body>
 </body>
